# fsspec-polars

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/fsspec_polars/: index.doctree
.doctrees/autoapi/fsspec_polars/db/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/pyarrow/tests/data/orc/: README.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
_modules/: index.html
_modules/fsspec_polars/: db.html
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/fsspec_polars/: index.rst.txt
_sources/autoapi/fsspec_polars/db/: index.rst.txt
_sources/autoapi/test_all/: index.rst.txt
autoapi/: index.html
autoapi/fsspec_polars/: index.html
autoapi/fsspec_polars/db/: index.html
autoapi/test_all/: index.html
fsspec_polars/: __init__.py  db.py
fsspec_polars/tests/: test_all.py
pyarrow/tests/data/orc/: README.html
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
