[package]
name = "fsspec_polars_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "fsspec_polars"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
fsspec_polars = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
